<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Docentes">

    <!-- Título fijo -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro de Docentes"
        android:textSize="35dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>

    <!-- Scroll para los campos de entrada -->
    <ScrollView
        android:id="@+id/scrollableContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/buttonLayout"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Rol (Admin o Docente) -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Role"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nombres -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <EditText
                    android:id="@+id/etNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Names"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Apellidos -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <EditText
                    android:id="@+id/etSurnames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Surnames"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- CI -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <EditText
                    android:id="@+id/etCi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Ci"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Carrera -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etCareer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Career"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/User"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Contraseña-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp">
                <EditText
                    android:id="@+id/etPassword"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Botones fijos -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerDButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="Registrar"
            android:textAllCaps="true"
            android:textSize="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelDButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="Cancelar"
            android:textAllCaps="true"
            android:textSize="16dp"/>
    </LinearLayout>
</RelativeLayout>