<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_Proyectos">

    <!-- Título fijo -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registro de Proyectos"
        android:textSize="35dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"/>

    <!-- Scroll para los campos de entrada -->
    <ScrollView
        android:id="@+id/scrollableContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/buttonLayout"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Proyecto -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/etProject_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Project_Name"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Integrante -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/etMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Integrante"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Carrera -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etCareer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Career"
                    android:inputType="none"
                    android:dropDownHeight="300dp"
                    android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Jurado 1-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etJury1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Jury1"
                    android:inputType="none"
                    android:dropDownHeight="300dp"
                    android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Jurado 2-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etJury2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Jury2"
                    android:inputType="none"
                    android:dropDownHeight="300dp"
                    android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Jurado 3-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etJury3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Jury3"
                    android:inputType="none"
                    android:dropDownHeight="300dp"
                    android:scrollbars="vertical"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Resumen -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:startIconDrawable="@drawable/resumen"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <EditText
                    android:id="@+id/etProject_Summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Project_Summary"
                    android:inputType="textMultiLine"
                    android:maxLength="2000"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Botones fijos -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerPButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="Registrar"
            android:textAllCaps="true"
            android:textSize="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelPButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="Cancelar"
            android:textAllCaps="true"
            android:textSize="16dp"/>
    </LinearLayout>
</RelativeLayout>